[tool.poetry]
name = "validate-mujoco-bindings-gym-robotics"
version = "0.1.0"
description = "Benchmark for the new version of the Gym Robotics repo with SB3"
authors = ["Rodrigo Perez-Vicente <r.l.p.v96@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
stable-baselines3 = {git="https://github.com/rodrigodelazcano/stable-baselines3.git"}
sb3-contrib = {git="https://github.com/rodrigodelazcano/stable-baselines3-contrib.git"}
Gym-Robotics = {git="https://github.com/rodrigodelazcano/Gym-Robotics.git", branch="mujoco-bindings"}
python = ">=3.7, <=3.10"
gym = ">=0.25"
torch = "1.11.0"
tensorboard = "2.8.0"
mujoco = "2.2.1"
wandb = ">=0.13.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
